--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.scss
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.scss
@@ -73,3 +73,14 @@ ion-card {
       font-weight: 600;
     }
   }
+
+  .filter-btn{
+    width: 36px;
+    margin-left: 3rem;
+  }
+
+  .selected {
+    background-color: #7e2212; 
+    color: white;
+  }
+  
