--- a/App/src/app/shared/models/no-data/no-data.component.html
+++ b/App/src/app/shared/models/no-data/no-data.component.html
@@ -11,6 +11,6 @@
 
 <ion-content [fullscreen]="true">
   <ion-item lines="none">
-    <img src="../../../../assets/no-data-icon-17-removebg-preview.png" alt="" />
+    <img src="../../../../assets/no-data.jpg" alt="" />
   </ion-item>
 </ion-content>
