--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
@@ -28,9 +28,6 @@
                   <ion-item>
                     <ion-grid>
                       <ion-row class="ion-padding-bottom">
-                        <ion-searchbar></ion-searchbar>
-                      </ion-row>
-                      <ion-row class="ion-padding-bottom">
                         <ion-label>Blood Group</ion-label>
                       </ion-row>
                       <ion-row class="ion-padding-bottom">
@@ -43,7 +40,7 @@
                           {{group}}
                         </ion-button>
                       </ion-row>
-                      <ion-row class="ion-padding-bottom">
+                      <!-- <ion-row class="ion-padding-bottom">
                         <ion-label>Blood Type</ion-label>
                       </ion-row>
                       <ion-row class="ion-padding-bottom">
@@ -55,20 +52,28 @@
                           (click)="toggleBloodType(type)">
                           {{type}}
                         </ion-button>
+                      </ion-row> -->
+                      <ion-row class="ion-padding-bottom">
+                        <ion-label>Blood Bank Name</ion-label>
                       </ion-row>
                       <ion-row class="ion-padding-bottom">
-                        <ion-label>Hospital Name</ion-label>
-                      </ion-row>
-                      <ion-row class="ion-align-items-center ion-justify-content-center ion-padding-bottom">
                         <ion-col size="12">
-                          <ion-item class="input">
-                            <ion-select 
-                              placeholder="Select Hospital Name"
-                              multiple="true"
-                              (ionChange)="onHospitalChange($event)"
-                              [value]="selectedHospitals">
-                              <ion-select-option *ngFor="let name of hospitalName" [value]="name">{{ name }}</ion-select-option>
-                            </ion-select>
+                          <ion-item class="input-class mt-3" lines="none">
+                            <ion-input label-placement="stacked" type="text" placeholder="Enter Blood Bank Name Here">
+                            </ion-input>
+                          </ion-item>
+                        </ion-col>
+                      </ion-row>
+                      <ion-row class="ion-padding-bottom">
+                        <ion-label>Blood Donation Date</ion-label>
+                      </ion-row>
+                      <ion-row class="ion-align-items-center ion-justify-content-center">
+                        <ion-col size="12">
+                          <ion-item fill="outline" class="input-class">
+                            <ion-label *ngIf="!f['donationDate'].value" position="floating" labelPlacement="stacked">{{'Donation Date'}}</ion-label>
+                            <p class="ion-margin-end">{{f['donationDate'].value | date}}</p>
+                            <ion-icon slot="end" color="primary" name="calendar-outline" datetime="datetime" class="ion-margin-top"
+                              (click)="openCalender('donationDate')"></ion-icon>
                           </ion-item>
                         </ion-col>
                       </ion-row>
@@ -162,7 +167,7 @@
                         </div>
                       </div>
                     </ion-col>
-                    <ion-col size="3">
+                    <ion-col size="3" class="ion-text-end ion-align-items-center">
                       <ion-button
                         *ngIf="user.role=='ADMIN' && l.status=='DONE'"
                         (click)="close($event,l.id,i)"
