--- a/App/src/app/auth/edit-profile/edit-profile/edit-profile.page.html
+++ b/App/src/app/auth/edit-profile/edit-profile/edit-profile.page.html
@@ -14,8 +14,13 @@
             <ion-row>
               <ion-col size="12">
                 <ion-item class="input-class mt-3" lines="none">
-                  <ion-input label="First Name" label-placement="stacked" type="text" placeholder="Enter First Name"
-                    formControlName="firstName" >
+                  <ion-input
+                    label="First Name"
+                    label-placement="stacked"
+                    type="text"
+                    placeholder="Enter First Name"
+                    formControlName="firstName"
+                  >
                   </ion-input>
                 </ion-item>
               </ion-col>
@@ -23,8 +28,13 @@
             <ion-row>
               <ion-col size="12">
                 <ion-item class="input-class mt-3" lines="none">
-                  <ion-input label="Last Name" label-placement="stacked" type="text" placeholder="Enter Last Name"
-                    formControlName="lastName" >
+                  <ion-input
+                    label="Last Name"
+                    label-placement="stacked"
+                    type="text"
+                    placeholder="Enter Last Name"
+                    formControlName="lastName"
+                  >
                   </ion-input>
                 </ion-item>
               </ion-col>
@@ -32,8 +42,13 @@
             <ion-row>
               <ion-col size="12">
                 <ion-item class="input-class mt-3" lines="none">
-                  <ion-input label="Email" label-placement="stacked" type="text" placeholder="Enter Email"
-                    formControlName="email" >
+                  <ion-input
+                    label="Email"
+                    label-placement="stacked"
+                    type="text"
+                    placeholder="Enter Email"
+                    formControlName="email"
+                  >
                   </ion-input>
                 </ion-item>
               </ion-col>
@@ -41,24 +56,170 @@
             <ion-row>
               <ion-col size="12">
                 <ion-item class="input-class mt-3" lines="none">
-                  <ion-input label="Mobile Number" label-placement="stacked" type="text" placeholder="Enter Mobile Number"
-                    formControlName="mobileNo" >
+                  <ion-input
+                [readonly]="true"
+                    label="Mobile Number"
+                    label-placement="stacked"
+                    type="text"
+                    placeholder="Enter Mobile Number"
+                    formControlName="mobileNo"
+                  >
                   </ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
+
+            <ion-row>
+              <ion-col size="12">
+                <ion-item class="input-class mt-3" lines="none">
+                  <ion-input
+                    label="Pincode"
+                    label-placement="stacked"
+                    type="text"
+                    placeholder="Pincode"
+                    formControlName="pincode"
+                  >
+                  </ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+
+            <ion-row>
+              <ion-col size="12">
+                <ion-item class="input-class mt-3" lines="none">
+                  <ion-select
+                    aria-label="Fruit"
+                    interface="action-sheet"
+                    placeholder="{{'select bloodgroup' | translate}}"
+                    formControlName="bloodGroup"
+                  >
+                    <ion-select-option
+                      *ngFor="let item of bloodGroup"
+                      value="{{item}}"
+                      >{{item}}</ion-select-option
+                    >
+                  </ion-select>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+
+            <ion-row class="ion-align-items-center ion-justify-content-center">
+              <ion-col size="12">
+                <ion-item class="input-class mt-3" lines="none">
+                  <!-- <ion-label
+                    *ngIf="!f['DOB'].value"
+                    position="floating"
+                    labelPlacement="stacked"
+                    >{{'DOB' | translate }}</ion-label
+                  > -->
+                  <ion-text class="dob" *ngIf="!f['DOB'].value">
+                    DOB
+                  </ion-text>
+                  <p class="ion-margin-end">{{f['DOB'].value | date}}</p>
+                  <ion-icon
+                    slot="end"
+                    color="primary"
+                    name="calendar-outline"
+                    datetime="datetime"
+                    class="ion-margin-top"
+                    (click)="openCalender('DOB')"
+                  ></ion-icon>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+
+            <ion-row class="ion-align-items-center ion-justify-content-center">
+              <ion-col size="12">
+                <ion-item class="input-class mt-3">
+                  <ion-label position="floating" labelPlacement="stacked"
+                    >{{'State'}}
+                  </ion-label>
+                  <ionic-selectable
+                  [(ngModel)]="selectTable.state"
+                  [ngModelOptions]="{standalone: true}"
+                          class="ion-text-capilatize"
+                          [items]="states"
+                          itemTextField="stateName"
+                          itemValueField="id"
+                          [canSearch]="true"
+                          (onChange)="getDistrictByStateId()"
+                          [hasConfirmButton]="true"
+                          [hasInfiniteScroll]="true"
+                        >
+                  </ionic-selectable>
+        
+                </ion-item>
+              </ion-col>
+            </ion-row>
+            <!-- state ends -->
+            <ion-row class="ion-align-items-center ion-justify-content-center">
+              <ion-col size="12">
+                <ion-item class="input-class mt-3">
+                  <ion-label position="floating" labelPlacement="stacked"
+                    >District
+                  </ion-label>
+                  <ionic-selectable
+                  [(ngModel)]="selectTable.district"
+                  [ngModelOptions]="{standalone: true}"
+                  class="ion-text-capilatize"
+                  [items]="district"
+                  itemTextField="districtName"
+                  itemValueField="id"
+                  [canSearch]="true"
+                  (onChange)="getTahsilByDistrictId()"
+                  [hasConfirmButton]="true"
+                  [hasInfiniteScroll]="true"
+                >
+                 </ionic-selectable>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+            <ion-row class="ion-align-items-center ion-justify-content-center">
+              <ion-col size="12">
+                <ion-item class="input-class mt-3">
+                  <ion-label position="floating" labelPlacement="stacked"
+                    >Tehsil
+                  </ion-label>
+                  <ionic-selectable
+                  [(ngModel)]="selectTable.tahsil"
+                  [ngModelOptions]="{standalone: true}"
+                     class="ion-text-capilatize"
+                     [items]="tehsil"
+                    itemTextField="tahsilName"
+                    itemValueField="id"
+                    [canSearch]="true"
+                    (onChange)="getVillageByTahsilId()"
+                    [hasConfirmButton]="true"
+                    [hasInfiniteScroll]="true"
+                >
+                 </ionic-selectable>
+        
+                </ion-item>
+              </ion-col>
+            </ion-row>
+            <ion-row class="ion-align-items-center ion-justify-content-center">
+              <ion-col size="12">
+                <ion-item class="input-class mt-3">
+                  <ion-label position="floating" labelPlacement="stacked"
+                    >Village
+                  </ion-label>
+                  <ionic-selectable
+                  [(ngModel)]="selectTable.village"
+                  [ngModelOptions]="{standalone: true}"
+                  class="ion-text-capilatize"
+                  [items]="village"
+                  itemTextField="villageName"
+                  itemValueField="id"
+                  [canSearch]="true"
+                  [hasConfirmButton]="true"
+                  [hasInfiniteScroll]="true"
+             >
+              </ionic-selectable>
             
-            
-            <ion-row>
-              <ion-col size="12">
-                <ion-item class="input-class mt-3" lines="none">
-                  <ion-input label="Pincode" label-placement="stacked" type="text" placeholder="Pincode"
-                    formControlName="pincode">
-                  </ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
-          
+
             <!-- <ion-row class="ion-align-items-center ion-justify-content-center">
               <ion-col size="12">
                 <ion-item fill="outline" lines="none">
@@ -120,8 +281,12 @@
             </ion-row> -->
             <ion-row class="ion-align-items-center ion-justify-content-center">
               <ion-col size="12">
-                <ion-button expand="block" class="button ion-justify-content-end ion-padding" color="primary"
-                  (click)="update()">Update
+                <ion-button
+                  expand="block"
+                  class="button ion-justify-content-end ion-padding"
+                  color="primary"
+                  (click)="update()"
+                  >Update
 
                   <!-- <img class="editForm" src="../../../assets/edit (1).png" alt=""> -->
                 </ion-button>
