--- a/App/src/app/auth/edit-profile/edit-profile/edit-profile.page.html
+++ b/App/src/app/auth/edit-profile/edit-profile/edit-profile.page.html
@@ -6,10 +6,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card>
+  <div *ngIf="loader; else otherContent">
+    <app-skeleton></app-skeleton>
+  </div>
+  <ng-template #otherContent>
+
+  <!-- <ion-card > -->
     <ion-card-content>
       <form [formGroup]="editRegistrationForm">
-        <ion-item>
+        <!-- <ion-item> -->
           <ion-grid>
             <ion-row>
               <ion-col size="12">
@@ -282,7 +287,8 @@
             <ion-row class="ion-align-items-center ion-justify-content-center">
               <ion-col size="12">
                 <ion-button
-                  expand="block"
+                  expand="full"
+                  shape="round"
                   class="button ion-justify-content-end ion-padding"
                   color="primary"
                   (click)="update()"
@@ -293,8 +299,10 @@
               </ion-col>
             </ion-row>
           </ion-grid>
-        </ion-item>
+        <!-- </ion-item> -->
       </form>
     </ion-card-content>
-  </ion-card>
+  <!-- </ion-card> -->
+</ng-template>
+
 </ion-content>
