--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
@@ -59,7 +59,7 @@
                       <ion-row class="ion-padding-bottom">
                         <ion-col size="12">
                           <ion-item class="input-class mt-3" lines="none">
-                            <ion-input label-placement="stacked" type="text" placeholder="Enter Blood Bank Name Here">
+                            <ion-input label-placement="stacked" type="text" placeholder="Enter Blood Bank Name Here" [(ngModel)]="bloodBankName">
                             </ion-input>
                           </ion-item>
                         </ion-col>
@@ -70,8 +70,8 @@
                       <ion-row class="ion-align-items-center ion-justify-content-center">
                         <ion-col size="12">
                           <ion-item fill="outline" class="input-class">
-                            <ion-label *ngIf="!f['donationDate'].value" position="floating" labelPlacement="stacked">{{'Donation Date'}}</ion-label>
-                            <p class="ion-margin-end">{{f['donationDate'].value | date}}</p>
+                            <ion-label *ngIf="!donationDate" position="floating" labelPlacement="stacked">{{'Donation Date'}}</ion-label>
+                            <p class="ion-margin-end">{{donationDate | date}}</p>
                             <ion-icon slot="end" color="primary" name="calendar-outline" datetime="datetime" class="ion-margin-top"
                               (click)="openCalender('donationDate')"></ion-icon>
                           </ion-item>
